[package]
name = "luduvo-api"
description = "a rust library for interacting with the luduvo api"
version = "0.1.0"
authors = ["primiti_ve"]
readme = "README.md"
repository = "https://github.com/luduvo-devhub/luduvo-rs"
license = "MIT"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"

[features]
default = ["users", "places", "prelude"]
prelude = []
users = [
    "friends",
    "profile",
    "query"
]
friends = []
profile = []
query = []
places = []
auth = []

[package.metadata.docs.rs]
all-features = false
no-default-features = true
features = []
targets = []
