[package]
name = "luduvo-verify"
description = "a rust library for verifying a users luduvo account"
version = "0.1.0"
authors = ["primiti_ve"]
readme = "README.md"
repository = "https://github.com/luduvo-devhub/luduvo-rs"
license = "MIT"
edition = "2024"

[dependencies]
thiserror = { version = "2.0" }
rand = { version = "0.10", features = ["thread_rng"] }
luduvo-api = { version = "0.1.0", path = "../api" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = false
no-default-features = true
features = []
targets = []
